# src/main/java/io/poleray/api/AppApiController.java
@@ -43,11 +43,13 @@ public class AppApiController implements AppApi {
     public ResponseEntity<List<Score>> appSectionGet(@Parameter(in = ParameterIn.PATH, description = "", required=true, schema=@Schema()) @PathVariable("app") String app,
                                                      @Parameter(in = ParameterIn.PATH, description = "", required=true, schema=@Schema()) @PathVariable("section") String section,
                                                      @Parameter(in = ParameterIn.QUERY, description = "" ,schema=@Schema(allowableValues={ "100" }, defaultValue="0")) @Valid @RequestParam(value = "positionToSkip", required = false, defaultValue="0") Integer positionToSkip,
-                                                     @Max(100) @Parameter(in = ParameterIn.QUERY, description = "" ,schema=@Schema(allowableValues={ "100" }, maximum="100", defaultValue="10")) @Valid @RequestParam(value = "count", required = false, defaultValue="10") Integer count) {
+                                                     @Max(100) @Parameter(in = ParameterIn.QUERY, description = "" ,schema=@Schema(allowableValues={ "100" }, maximum="100", defaultValue="10")) @Valid @RequestParam(value = "count", required = false, defaultValue="10") Integer count,
+                                                     @Parameter(in = ParameterIn.QUERY, description = "device ID" ,schema=@Schema(defaultValue="")) @Valid @RequestParam(value = "deviceid", required = false, defaultValue="") String deviceID)
+    {
         String accept = request.getHeader("Accept");
         if (accept != null && accept.contains("application/json")) {
             try {
-                return new ResponseEntity<List<Score>>(scoreDAO.getScoreBySection(app, section, positionToSkip, count), HttpStatus.OK);
+                return new ResponseEntity<List<Score>>(scoreDAO.getScoreBySection(app, section, positionToSkip, count,deviceID), HttpStatus.OK);
             } catch (Exception e) {
                 log.error("Couldn't serialize response for content type application/json", e);
                 return new ResponseEntity<List<Score>>(HttpStatus.INTERNAL_SERVER_ERROR);
@@ -68,11 +70,12 @@ public class AppApiController implements AppApi {
     public ResponseEntity<List<Score>> getRecordsAroundId(@Parameter(in = ParameterIn.PATH, description = "", required=true, schema=@Schema()) @PathVariable("app") String app,
                                                           @Parameter(in = ParameterIn.PATH, description = "", required=true, schema=@Schema()) @PathVariable("section") String section,
                                                           @Parameter(in = ParameterIn.PATH, description = "", required=true, schema=@Schema()) @PathVariable("id") String id,
-                                                          @Max(100) @Parameter(in = ParameterIn.QUERY, description = "" ,schema=@Schema(allowableValues={ "100" }, maximum="100", defaultValue="10")) @Valid @RequestParam(value = "count", required = false, defaultValue="10") Integer count) {
+                                                          @Max(100) @Parameter(in = ParameterIn.QUERY, description = "" ,schema=@Schema(allowableValues={ "100" }, maximum="100", defaultValue="10")) @Valid @RequestParam(value = "count", required = false, defaultValue="10") Integer count,
+                                                          @Parameter(in = ParameterIn.QUERY, description = "device ID" ,schema=@Schema(defaultValue="")) @Valid @RequestParam(value = "deviceid", required = false, defaultValue="") String deviceID) {
         String accept = request.getHeader("Accept");
         if (accept != null && accept.contains("application/json")) {
             try {
-                return new ResponseEntity<List<Score>>(scoreDAO.getScoreById(app, section, id, count), HttpStatus.OK);
+                return new ResponseEntity<List<Score>>(scoreDAO.getScoreById(app, section, id, count, deviceID), HttpStatus.OK);
             } catch (Exception e) {
                 log.error("Couldn't serialize response for content type application/json", e);
                 return new ResponseEntity<List<Score>>(HttpStatus.INTERNAL_SERVER_ERROR);
@@ -118,7 +121,7 @@ public class AppApiController implements AppApi {
         if (accept != null && accept.contains("application/json")) {
             try {
                 String id = scoreDAO.addScore(app, section, body);
-                return new ResponseEntity<List<Score>>(scoreDAO.getScoreById(app, section, id, 10), HttpStatus.OK);
+                return new ResponseEntity<List<Score>>(scoreDAO.getScoreById(app, section, id, 10, body.getDeviceId()), HttpStatus.OK);
             } catch (Exception e) {
                 log.error("Couldn't serialize response for content type application/json", e);
                 return new ResponseEntity<List<Score>>(HttpStatus.INTERNAL_SERVER_ERROR);
